--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-iphone-x-helper": "^1.2.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-message-bar": "^2.0.10",
     "react-native-modal": "^9.0.0",
     "react-native-router-flux": "4.0.0-beta.27",
@@ -30,11 +31,8 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.54.0",
-    "react-test-renderer": "16.8.3",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-preset-flow": "6.23.0",
     "babel-preset-react-native": "^5",
     "eslint": "^5.12.0",
@@ -45,7 +43,10 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
     "eslint-plugin-react-native": "3.2.1",
-    "flow-bin": "0.71.0"
+    "flow-bin": "0.71.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.0",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
