--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-message-bar": "^2.0.10",
     "react-native-modal": "^9.0.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-router-flux": "4.0.0-beta.27",
     "react-native-swipeout": "^2.3.6",
     "react-native-swiper": "^1.5.14",
