profile image upload

--- a/ios/LegendsTour/Info.plist
+++ b/ios/LegendsTour/Info.plist
@@ -39,6 +39,11 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like access to your photo gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like to use your camera</string>
+	
 	<key>UIAppFonts</key>
 	<array>
 		<string>CircularStd-Black.otf</string>
