--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-animate-number": "^0.1.2",
+    "react-native-bottomsheet": "^2.0.1",
+    "react-native-image-crop-picker": "0.24.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-message-bar": "^2.0.10",
     "react-native-modal": "^9.0.0",
+    "react-native-open-settings": "^1.0.1",
     "react-native-orientation": "^3.1.3",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.4.0",
