--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'LegendsTour'
+include ':react-native-firebase'
+project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
 include ':react-native-bottomsheet'
 project(':react-native-bottomsheet').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottomsheet/android')
 include ':react-native-image-crop-picker'
