--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,9 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-reanimated')
+    implementation project(':react-native-gesture-handler')
     implementation project(':react-native-firebase')
     implementation project(':react-native-bottomsheet')
     implementation project(':react-native-image-crop-picker')
@@ -158,7 +161,8 @@ dependencies {
     implementation project(':react-native-orientation')
     implementation project(':react-native-svg')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    //noinspection GradleCompatible
+    //implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation("com.android.support:design:27.1.0") 
     implementation "com.google.android.gms:play-services-base:16.1.0"
