--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,3 +22,5 @@ MYAPP_RELEASE_STORE_FILE=legends-release.keystore
 MYAPP_RELEASE_KEY_ALIAS=legends-key-alias
 MYAPP_RELEASE_STORE_PASSWORD=123456
 MYAPP_RELEASE_KEY_PASSWORD=123456
+android.useAndroidX=true
+android.enableJetifier=true
