--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "postinstall": "./update_node_modules.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
@@ -17,6 +16,7 @@
     "react-native-animate-number": "^0.1.2",
     "react-native-bottomsheet": "^2.0.1",
     "react-native-firebase": "^5.5.6",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "0.24.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-spacer": "^0.4.1",
@@ -25,7 +25,9 @@
     "react-native-modal": "^9.0.0",
     "react-native-open-settings": "^1.0.1",
     "react-native-orientation": "^3.1.3",
+    "react-native-reanimated": "^1.9.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-screens": "^2.8.0",
     "react-native-svg": "^9.4.0",
     "react-native-svg-charts": "^5.2.0",
     "react-native-swipeout": "^2.3.6",
@@ -38,7 +40,8 @@
     "redux-storage-decorator-filter": "^1.1.8",
     "redux-storage-engine-reactnativeasyncstorage": "^1.0.5",
     "remote-redux-devtools": "^0.5.16",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -57,6 +60,7 @@
     "eslint-plugin-react-native": "3.2.1",
     "flow-bin": "0.71.0",
     "jest": "^24.8.0",
+    "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "^0.54.0",
     "react-test-renderer": "16.8.3"
   },
