--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-alphabet-sectionlist": "0.0.4",
     "react-native-animate-number": "^0.1.2",
     "react-native-bottomsheet": "^2.0.1",
     "react-native-firebase": "^5.5.6",
@@ -26,7 +27,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-open-settings": "^1.0.1",
     "react-native-orientation": "^3.1.3",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-reanimated": "^1.10.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "^2.8.0",
     "react-native-svg": "^9.4.0",
