--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-open-settings": "^1.0.1",
     "react-native-orientation": "^3.1.3",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.10.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "^2.8.0",
