--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.7.1",
     "@react-native-community/viewpager": "^4.1.0",
     "apisauce": "^1.0.2",
     "lodash": "^4.17.11",
@@ -17,6 +18,7 @@
     "react-native-alphabet-sectionlist": "0.0.4",
     "react-native-animate-number": "^0.1.2",
     "react-native-bottomsheet": "^2.0.1",
+    "react-native-expandable-listview": "^1.2.0",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "0.24.1",
@@ -27,6 +29,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-open-settings": "^1.0.1",
     "react-native-orientation": "^3.1.3",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.10.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "^2.8.0",
