--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-native-alphabet-sectionlist": "0.0.4",
     "react-native-animate-number": "^0.1.2",
     "react-native-bottomsheet": "^2.0.1",
+    "react-native-chart-kit": "^6.6.1",
+    "react-native-collapsible": "^1.5.3",
+    "react-native-draggable-flatlist": "^2.4.0",
     "react-native-expandable-listview": "^1.2.0",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.6.1",
@@ -27,6 +30,7 @@
     "react-native-linear-gradient": "^2.5.4",
     "react-native-message-bar": "^2.0.10",
     "react-native-modal": "^9.0.0",
+    "react-native-modal-dropdown": "^0.7.0",
     "react-native-open-settings": "^1.0.1",
     "react-native-orientation": "^3.1.3",
     "react-native-popup-dialog": "^0.18.3",
