--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-svg-charts": "^5.2.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-swiper": "^1.5.14",
+    "react-native-walkthrough-tooltip": "^1.1.11",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
