--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animate-number": "^0.1.2",
     "react-native-bottomsheet": "^2.2.0",
     "react-native-chart-kit": "^6.6.1",
+    "react-native-checkbox": "^2.0.0",
     "react-native-collapsible": "^1.5.3",
     "react-native-draggable-flatlist": "^2.4.0",
     "react-native-expandable-listview": "^1.2.11",
