--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ buck-out/
 
 # Cocoapods
 ios/Pods/
+ios/Podfile.lock
+package-lock.json
+ios/legendstourrr.xcodeproj/project.pbxproj
+ios/legendstourrr.xcodeproj/project.pbxproj
+ios/Podfile.lock
