--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "redux-saga": "^1.1.3",
     "redux-storage": "^4.1.2",
     "redux-storage-decorator-filter": "^1.1.8",
