--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-swiper": "^1.6.0",
+    "react-native-switch-selector": "^2.1.4",
     "react-native-vector-icons": "^7.1.0",
     "react-native-walkthrough-tooltip": "^1.1.11",
     "react-redux": "^7.2.1",
