--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ package-lock.json
 ios/legendstourrr.xcodeproj/project.pbxproj
 ios/legendstourrr.xcodeproj/project.pbxproj
 ios/Podfile.lock
+ios/Podfile.lock
