--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ ios/legendstourrr.xcodeproj/project.pbxproj
 ios/legendstourrr.xcodeproj/project.pbxproj
 ios/Podfile.lock
 ios/Podfile.lock
+ios/legendstourrr.xcodeproj/project.pbxproj
